update: support jdk11